--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ THE HEADER
 
 	<div id="content">
 
-		<p>
 
 		<h2>Lorem ipsum dolor sit amet...</h2> 
+		<p>
 Consectetur adipiscing elit. Donec malesuada diam vel sapien dapibus blandit. Integer magna quam, placerat et augue in, molestie malesuada diam. Vestibulum viverra tortor id condimentum luctus. Ut et tellus id odio consequat suscipit. Phasellus luctus risus est, ut euismod sem ullamcorper ac. Ut faucibus, nisl tincidunt tincidunt bibendum, tortor urna scelerisque ex, et dapibus ligula nisi id nulla. Donec dui diam, convallis cursus iaculis vel, congue non orci. In semper commodo semper. Donec eu turpis dolor.
 
 Quisque dictum eros augue, ac finibus velit gravida in. Quisque volutpat eros neque, nec tempus felis commodo facilisis. Duis pulvinar mi vulputate, vulputate lacus sit amet, mollis lectus. Sed ultrices imperdiet ante quis aliquet. Mauris risus justo, facilisis auctor ullamcorper in, lacinia at nibh. Aenean quis posuere quam, nec elementum neque. Vivamus tempor, sem sit amet blandit suscipit, mauris orci euismod tellus, et scelerisque ex odio vel justo. Sed egestas justo in viverra faucibus. Ut massa mauris, commodo ut congue in, imperdiet vel lectus.
@@ -68,7 +68,7 @@ Cras quam risus, faucibus non condimentum sed, ultrices eget arcu. Fusce venenat
 	<div id="sidecontent">
 
 	<h2> costam costam </h2>
-	<center><img src="pk.png"></center>
+	<img src="pk.png" alt="nie ma obrazka :c">
 	<br>
 
 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sollicitudin rhoncus lacus, a ultricies lacus dapibus nec. Duis a ultricies velit, at porttitor tortor. Sed bibendum id elit at tincidunt. Aliquam gravida dui id orci bibendum, quis interdum mauris semper. Nulla vel ante metus. Nulla vel mauris eros. Duis non velit felis. 
